--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -21,7 +21,20 @@
         <p><a class="btn-basic btn-blue" data-scroll href="#register">Garanta a sua vaga!</a></p>
     </div>
 </section>
+<section id="speakers">
+     <div class="speakers text-align-center row dasktop-8 padding-bottom-2 container">
+         <h2>Palestrantes Convidados</h2>
 
+         {% for speaker in speakers %}
+             <div class="desktop-6">
+                 <img src="{{ speaker.photo }}">
+                 <h4>{{ speaker.name }}</h4>
+             </div>
+         {% endfor %}
+
+
+     </div>
+</section>
 <!-- SPONSORS -->
 <section id="sponsors">
     <div class="sponsors text-align-center row desktop-12 min-h-28 padding-bottom-2 container">
